# listener-lens

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DESIGN.md  LICENSE  README.md  bakeoff.yaml  deployment-state.json  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.runtime-v2.jsonc
container/: Dockerfile  requirements.txt
corpus/: PROMPT.md  candidates.json
rules/: azure-ipa-map-v1.json  azure-listener-lenses-v1.json  bilingual-candidate-runtime-gate-v1.json  bilingual-central-vowel-correction-v1.json  bilingual-kokoro-candidate-state-v1.json  bilingual-kokoro-composition-candidate-v1.json  bilingual-kokoro-composition-candidate-v2.json  bilingual-kokoro-composition-candidate-v3.json  bilingual-listener-lenses-v2.json  bilingual-product-audio-integrity-screen-v1.json  bilingual-product-audio-integrity-state-v1.json  bilingual-product-isolated-audio-screen-v1.json  bilingual-product-isolated-audio-state-v1.json  bilingual-product-matrix-v1.json  bilingual-product-structural-state-v1.json  bilingual-product-v8-vowel-acoustic-screen.json  bilingual-product-vowel-acoustic-screen-v1.json  bilingual-rule-display-v1.json  bilingual-v8-carrier-retry-correction-v1.json  bilingual-v8-carrier-retry-unseen-confirmation-v1.json  bilingual-v8-composition-spike-v1.json  bilingual-v8-composition-unseen-confirmation-v2.json  bilingual-v8-factorized-composition-v2.json  bilingual-v8-occurrence-strength-correction-v1.json  bilingual-v8-separated-decode-composition-v3.json  bilingual-vowel-adaptive-strength-screen-v1.json  bilingual-vowel-lenses.json  (+26 more)
(+426 files in other folders)
