[project]
name = "renderer-bakeoff"
version = "0.1.0"
description = "Build Week renderer bake-off and typed listener-lens prototype"
readme = "README.md"
requires-python = "==3.12.12"
license = { file = "LICENSE" }
dependencies = [
  "huggingface-hub>=0.36,<2",
  "mlx==0.32.0",
  "mlx-whisper==0.4.3",
  "numpy==2.4.6",
  "openai==2.45.0",
  "pydantic>=2.11,<3",
  "wordfreq==3.1.1",
]

[project.scripts]
renderer-bakeoff = "earshift_bakeoff.cli:main"

[dependency-groups]
dev = [
  "praat-parselmouth==0.4.7",
  "pytest>=8.4,<10",
  "pyworld==0.3.5",
  "ruff>=0.12,<1",
  "setuptools==80.9.0",
  "websocket-client==1.9.0",
]
kokoro-engine = [
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "espeakng-loader==0.2.4",
  "kokoro==0.9.4",
  "misaki==0.9.4",
  "phonemizer-fork==3.3.2",
  "spacy==3.8.14",
  "torch==2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earshift_bakeoff"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
